--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,9 @@
-relay_pin: 26 # in BCM numbering
+relay_pin: 14 # in BCM numbering
 set_point: 95 # in degrees C
-delay_time: 10 # in seconds
+delay_time: 5 # in seconds
 plot_interval: 2 # in hours
 db_path: /home/pi/piggia/temps.db
-Kp: 0
-Ki: 0
-Kd: 0
+max_entries: 10000 # max entries in DB
+K_p: 3
+K_i: 0.02
+K_d: 200
